--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  padding: 40px;
+  background-color: #151515;
+  font-family: 'Franklin Gothic Medium', 'Arial';
+}
+
+h2 {
+  color: #f3f3f3;
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 48px;
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
@@ -16,4 +35,13 @@
   border-radius: 10px;
   min-height: 100px;
 
+}
+
+button {
+  border: none;
+  font-size: 30px;
+  background-color: transparent;
+  width: 100%;
+  text-align: right;
+  cursor: pointer;
 }
